<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/backg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <TextView
        android:id="@+id/tView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/character1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.229"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.117" />

    <TextView
        android:id="@+id/tView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:text="@string/code2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toEndOf="@+id/tView1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.116" />

    <ImageView
        android:id="@+id/iView1"
        android:layout_width="113dp"
        android:layout_height="106dp"
        android:layout_marginStart="60dp"
        android:src="@drawable/a"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/iView2"
        app:layout_constraintHorizontal_bias="0.013"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.194"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/iView2"
        android:layout_width="113dp"
        android:layout_height="106dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/num65"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.829"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.194"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/character2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.229"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iView1" />

    <ImageView
        android:id="@+id/iView3"
        android:layout_width="113dp"
        android:layout_height="106dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/g"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/eText"
        app:layout_constraintHorizontal_bias="0.013"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tView3"
        app:layout_constraintVertical_bias="0.002"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/code"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.774"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iView2"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/eText"
        android:layout_width="113dp"
        android:layout_height="106dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:inputType="number"
        android:text=""
        android:textAlignment="center"
        android:textSize="35sp"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.829"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tView4"
        app:layout_constraintVertical_bias="0.015" />

    <Button
        android:id="@+id/bttn2"
        android:layout_width="122dp"
        android:layout_height="49dp"
        android:layout_marginTop="60dp"
        android:onClick="playAgainButton"
        android:text="@string/PlayAgainButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iView3" />

    <Button
        android:id="@+id/bttn1"
        android:layout_width="122dp"
        android:layout_height="49dp"
        android:layout_marginTop="56dp"
        android:onClick="submitButton"
        android:text="@string/submit_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eText" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="homePage"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_home_24" />


</androidx.constraintlayout.widget.ConstraintLayout>